Fix flicker problem with panel heights

--- a/src/scss/_actionPanel.scss
+++ b/src/scss/_actionPanel.scss
@@ -6,7 +6,7 @@ a#action_panel_button {
 aside#action_panel {
     border: 1px $lightgrey solid;
     background: $whiteglass;
-    padding-bottom: 1em;
+    margin-bottom: 1em;
     padding-top: 1em;
     min-height: 450px;
     height: auto;
