--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -44,8 +44,8 @@ article {
     display: block;
     border: 1px $lightgrey solid;
     background: $whiteglass;
-    margin-bottom: 3em;
-    min-height: 400px;
+    margin-bottom: 1em;
+    min-height: 100vh;
     height: auto;
     box-sizing: border-box;
 }
